--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,4 @@ vcpkg*
 /data/template_assets/template_material_ball
 /source/x64/Debug
 /data/template_assets/template_render_settings
+/source/html
